Add stuck mechanism for agents:
* Agents receiving a Stuck event during the simulation wrap up their experienced plan with an open leg
* Engines issue PersonStuckEvents when the simulation calls afterSim. This way the ScoringDataCollector finishes these persons as well and passes them on to the scoring and the experienced plans collector

Signed-off-by: Janek Laudan <laudan@simunto.com>